--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
+    "deepmerge": "^4.2.2",
     "typescript": "4.9.4"
   }
 }
