--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
     "deepmerge": "^4.2.2",
+    "prettier": "^2.8.1",
     "typescript": "4.9.4"
   }
 }
