--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "devDependencies": {
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
+    "autoprefixer": "^10.4.13",
     "deepmerge": "^4.2.2",
+    "postcss": "^8.4.20",
     "prettier": "^2.8.1",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   }
 }
