--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "autoprefixer": "^10.4.13",
     "deepmerge": "^4.2.2",
     "postcss": "^8.4.20",
+    "postcss-import": "^15.1.0",
+    "postcss-nesting": "^10.2.0",
     "prettier": "^2.8.1",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
