--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "classnames": "^2.3.2",
     "next": "13.0.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-ticker": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "18.11.12",
