--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.2",
     "next": "13.0.6",
     "react": "^18.2.0",
