--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.2",
+    "js-cookie": "^3.0.1",
     "keen-slider": "^6.8.5",
     "next": "13.0.6",
     "react": "^18.2.0",
