--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "13.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-ticker": "^1.3.2"
+    "react-ticker": "^1.3.2",
+    "swr": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "18.11.12",
